--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -25,9 +25,17 @@
         <filter-name>Checker</filter-name>
         <filter-class>it.polimi.tiw.filters.Checker</filter-class>
     </filter>
+    <filter>
+        <filter-name>NoCacher</filter-name>
+        <filter-class>it.polimi.tiw.filters.NoCacher</filter-class>
+    </filter>
     <filter-mapping>
         <filter-name>Checker</filter-name>
         <url-pattern>/home/*</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>NoCacher</filter-name>
+        <url-pattern>/home.html</url-pattern>
     </filter-mapping>
 
 </web-app>
