--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -10,11 +10,11 @@
     </context-param>
     <context-param>
         <param-name>dbUser</param-name>
-        <param-value>matmacsystem</param-value>
+        <param-value></param-value>
     </context-param>
     <context-param>
         <param-name>dbPassword</param-name>
-        <param-value>Jeremy1998</param-value>
+        <param-value></param-value>
     </context-param>
     <context-param>
         <param-name>dbDriver</param-name>
